Fixing shifting divs when doing shuffle animation

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1169,6 +1169,7 @@ input.loveit {
 	margin-bottom: 10px;
 	background: #fff;
 	overflow: hidden;
+	width: 688px;
 }
 
 .products-list .product-logo {
